--- a/docs/app.styl
+++ b/docs/app.styl
@@ -40,28 +40,28 @@
 
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('../lib/cmunrm.ttf') format('truetype');
+  src: url('../src/lib/cmunrm.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('../lib/cmunbx.ttf') format('truetype');
+  src: url('../src/lib/cmunbx.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('../lib/cmunti.ttf') format('truetype');
+  src: url('../src/lib/cmunti.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Computer Modern Serif';
-  src: url('../lib/cmunbi.ttf') format('truetype');
+  src: url('../src/lib/cmunbi.ttf') format('truetype');
   font-weight: bold;
   font-style: italic;
 }
